[gd_scene load_steps=29 format=2]

[ext_resource path="res://background/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/heart.tscn" type="PackedScene" id=2]
[ext_resource path="res://duckling/nothing.png" type="Texture" id=3]
[ext_resource path="res://background/bkgd_7.png" type="Texture" id=4]
[ext_resource path="res://Camera.gd" type="Script" id=5]
[ext_resource path="res://ducky_preview.gd" type="Script" id=6]
[ext_resource path="res://fade_in.gd" type="Script" id=7]
[ext_resource path="res://sfx/Gui_Button_Click.wav" type="AudioStream" id=8]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://music/DuckChips1.mp3" type="AudioStream" id=10]
[ext_resource path="res://hud/volume_bar.tscn" type="PackedScene" id=11]
[ext_resource path="res://pause_menu/pause_menu.tscn" type="PackedScene" id=12]
[ext_resource path="res://levels/level.gd" type="Script" id=13]
[ext_resource path="res://tv/vhs/vhs-tape.tscn" type="PackedScene" id=14]
[ext_resource path="res://levels/help_text.gd" type="Script" id=15]
[ext_resource path="res://pause_menu/pause_menu_large.tres" type="DynamicFont" id=16]
[ext_resource path="res://levels/lose.gd" type="Script" id=17]
[ext_resource path="res://tv/crt.tscn" type="PackedScene" id=18]
[ext_resource path="res://crt-corner-button.gd" type="Script" id=19]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.858824, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="Environment" id=3]
background_mode = 4
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.2

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Camera/Big CRT/Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
albedo_texture = SubResource( 4 )
metallic = 0.1
roughness = 0.2

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Camera/Big CRT/Screen Buttons")

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Camera/Big CRT/Screen Buttons")

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_texture = SubResource( 6 )
detail_enabled = true
detail_blend_mode = 1
detail_uv_layer = 0
detail_albedo = SubResource( 7 )

[sub_resource type="PlaneMesh" id=9]
resource_local_to_scene = true
material = SubResource( 8 )

[node name="Level" type="Node"]
script = ExtResource( 13 )

[node name="Click" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
pitch_scale = 1.59

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 0.75
autoplay = true

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 1.2, 1.2 )
motion_offset = Vector2( 738, 665 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
texture = ExtResource( 4 )
centered = false

[node name="DuckyPreview" type="TextureRect" parent="ParallaxBackground2"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 256.0
margin_bottom = 128.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ParallaxBackground2"]
anchor_left = 0.638
anchor_right = 0.645
margin_left = -133.0
margin_top = 8.0
margin_right = 137.0
margin_bottom = 107.0

[node name="HelpText" type="Label" parent="ParallaxBackground2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.5
margin_top = 23.5
margin_right = 198.5
margin_bottom = 176.5
text = "Move & rotate: W/A/D or arrow keys
Shoot: Space bar
Boost: Shift (must have energy)
Launch a duck: 1 (must have ducks)
Launch all ducks: 2
Recall ducks: 3
Hide this text: H"
align = 1
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="HBoxContainer" parent="ParallaxBackground2"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -32.0
margin_right = 500.0
margin_bottom = -12.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeBar" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 864.0
margin_right = 874.0

[node name="VolumeBar2" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 878.0
margin_right = 888.0

[node name="VolumeBar3" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 892.0
margin_right = 902.0

[node name="VolumeBar4" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 906.0
margin_right = 916.0

[node name="VolumeBar5" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 920.0
margin_right = 930.0

[node name="VolumeBar6" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 934.0
margin_right = 944.0

[node name="VolumeBar7" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 948.0
margin_right = 958.0

[node name="VolumeBar8" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 962.0
margin_right = 972.0

[node name="VolumeBar9" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]
margin_left = 976.0
margin_right = 986.0

[node name="VolumeBar10" parent="ParallaxBackground2/Volume" instance=ExtResource( 11 )]

[node name="Win" type="Label" parent="ParallaxBackground2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
rect_scale = Vector2( 5, 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lose" type="Label" parent="ParallaxBackground2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.5
margin_top = -119.5
margin_right = 308.5
margin_bottom = -24.5
custom_fonts/font = ExtResource( 16 )
text = "Ouch :(
Press \"R\" to restart the level"
align = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartContainer" type="HBoxContainer" parent="ParallaxBackground2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]

[node name="Heart2" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 68.0

[node name="Heart3" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 104.0

[node name="Heart4" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 108.0
margin_right = 140.0

[node name="Heart5" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 144.0
margin_right = 176.0

[node name="Heart6" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 180.0
margin_right = 212.0

[node name="Heart7" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 216.0
margin_right = 248.0

[node name="Heart8" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 252.0
margin_right = 284.0

[node name="Heart9" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 288.0
margin_right = 320.0

[node name="Heart10" parent="ParallaxBackground2/HeartContainer" instance=ExtResource( 2 )]
margin_left = 324.0
margin_right = 356.0

[node name="PlayerEnergy" type="ProgressBar" parent="ParallaxBackground2"]
margin_left = 8.0
margin_top = 48.0
margin_right = 364.0
margin_bottom = 62.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="ColorRect" parent="ParallaxBackground2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground2/FadeIn"]

[node name="PauseMenu" parent="ParallaxBackground2" instance=ExtResource( 12 )]
visible = false

[node name="Small CRT Button" type="Button" parent="ParallaxBackground2"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -245.0
margin_top = 16.0
margin_right = -15.0
margin_bottom = 209.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}
help_text = NodePath("../HelpText")
health_bar = NodePath("../HeartContainer")
player_energy = NodePath("../PlayerEnergy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50, 0 )
projection = 1
current = true
size = 60.0
far = 500.0
script = ExtResource( 5 )

[node name="vhs-tape" parent="Camera" instance=ExtResource( 14 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 41.776, 23.652, 0 )
visible = false

[node name="Small CRT" parent="Camera" instance=ExtResource( 18 )]
pause_mode = 2
transform = Transform( -7.53252, -0.383499, 2.66723, 0, 7.91857, 1.13854, -2.69466, 1.07201, -7.45584, 43.097, 10.613, -30 )

[node name="Big CRT" parent="Camera" instance=ExtResource( 18 )]
pause_mode = 2
transform = Transform( -27.802, 0, -1.20797e-06, 0, 23.329, 0, 4.19799e-06, 0, -8, -0.278, -29.259, -30 )
visible = false

[node name="Sphere" parent="Camera/Big CRT" index="6"]
material/0 = SubResource( 5 )

[node name="Select" parent="Camera/Big CRT" index="7"]
mesh = SubResource( 9 )
material/0 = SubResource( 8 )

[node name="Dialog Sound" parent="Camera/Big CRT" index="10"]
volume_db = -80.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.612372, -0.353553, 0, -0.5, 0.866025, -0.707107, -0.612372, -0.353553, 0, 11, 0 )
light_energy = 0.8

[node name="Player" parent="." instance=ExtResource( 9 )]

[connection signal="hide" from="ParallaxBackground2/Small CRT Button" to="ParallaxBackground2/Small CRT Button" method="_on_Small_CRT_Button_hide"]
[connection signal="pressed" from="ParallaxBackground2/Small CRT Button" to="Camera/Small CRT" method="_on_Small_CRT_Button_pressed"]
[connection signal="pressed" from="ParallaxBackground2/Small CRT Button" to="Camera/Big CRT" method="_on_Small_CRT_Button_pressed"]
[connection signal="pressed" from="ParallaxBackground2/Small CRT Button" to="ParallaxBackground2/Small CRT Button" method="_on_Small_CRT_Button_pressed"]
[connection signal="power_clicked" from="Camera/Big CRT/PowerButton/PowerButton" to="Camera/Small CRT" method="_on_PowerButton_power_clicked"]
[connection signal="power_clicked" from="Camera/Big CRT/PowerButton/PowerButton" to="Camera/Big CRT" method="_on_PowerButton_power_clicked"]
[connection signal="power_clicked" from="Camera/Big CRT/PowerButton/PowerButton" to="ParallaxBackground2/Small CRT Button" method="_on_PowerButton_power_clicked"]

[editable path="Camera/Big CRT"]
